--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,12 +1,11 @@
+<app-navbar></app-navbar>
 <h1>Datenflüsse und Online Adds</h1>
-<div
-  style="
+<div style="
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: space-around;
-  "
->
-  <app-piechart></app-piechart>
+    justify-content: center;
+    margin-top: 50px;
+  ">
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
