--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary">
-  <div class="link_wrapper">
+<mat-toolbar class="toolbar">
+  <div class=" link_wrapper">
     <a mat-button [routerLink]="'/pie'"> Pie Chart </a>
     <a mat-button [routerLink]="'/bar'"> Bar Chart </a>
     <a mat-button [routerLink]="'/network'"> Network </a>
