--- a/client/src/app/network/network.component.html
+++ b/client/src/app/network/network.component.html
@@ -1,3 +1,6 @@
 <!-- Create a div where the graph will take place -->
+<div class="title" style="display: flex">
+  <h1>{{selectedNetwork}}</h1>
+</div>
 
 <figure class="fig" id="network"></figure>
