--- a/client/src/app/network/network.component.html
+++ b/client/src/app/network/network.component.html
@@ -1,6 +1,7 @@
-<!-- Create a div where the graph will take place -->
+<!-- Create a div where the graph will take place
 <div class="title" style="display: flex">
   <h1>{{selectedNetwork}}</h1>
+</div> -->
+<div style="width: 100%; height:100%">
+  <figure class="fig" id="network"></figure>
 </div>
-
-<figure class="fig" id="network"></figure>
