zoom and drag working

--- a/client/src/app/network/network.component.html
+++ b/client/src/app/network/network.component.html
@@ -2,6 +2,5 @@
 <div class="title" style="display: flex">
   <h1>{{selectedNetwork}}</h1>
 </div> -->
-<div style="width: 100%; height:100%">
-  <figure class="fig" id="network"></figure>
+<div id="network">
 </div>
