--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -4,5 +4,6 @@
     <a mat-button [routerLink]="'/bar'"> Bar Chart </a>
     <a mat-button [routerLink]="'/bar-chart'">New Bar Chart </a>
     <a mat-button [routerLink]="'/network'"> Network </a>
+    <a mat-button [routerLink]="'/network-new'"> Network New </a>
   </div>
 </mat-toolbar>
