--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -3,7 +3,6 @@
     <a mat-button [routerLink]="'/pie'"> Pie Chart </a>
     <a mat-button [routerLink]="'/bar'"> Bar Chart </a>
     <a mat-button [routerLink]="'/bar-chart'">New Bar Chart </a>
-    <a mat-button [routerLink]="'/network'"> Network </a>
-    <a mat-button [routerLink]="'/network-new'"> Network New </a>
+    <a mat-button [routerLink]="'/network-new'"> Network</a>
   </div>
 </mat-toolbar>
