--- a/client/src/app/navbar/navbar.component.css
+++ b/client/src/app/navbar/navbar.component.css
@@ -8,7 +8,8 @@
   margin: 10px;
   text-decoration: none;
   color: black;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
   font-size: x-large;
 }
 
