--- a/client/src/app/color-legend/color-legend.component.html
+++ b/client/src/app/color-legend/color-legend.component.html
@@ -1,5 +1,5 @@
 <div class="colorMapping">
-    <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel [expanded]="false">
         <mat-expansion-panel-header>
             <mat-panel-title> Legende </mat-panel-title>
         </mat-expansion-panel-header>
