--- a/client/src/app/network-new/network-new.component.html
+++ b/client/src/app/network-new/network-new.component.html
@@ -1,3 +1,7 @@
+<div id="intro" class="title">
+  <h4>nodes & links</h4>
+  <h1>Network</h1>
+</div>
 <div class="select">
   <mat-form-field appearance="fill">
     <mat-label>Select Nodes</mat-label>
