--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div style="
+<div class="wrapper" style="
     display: flex;
     flex-direction: row;
     width: 100%;
