--- a/client/src/app/hierarch-bar/hierarch-bar.component.css
+++ b/client/src/app/hierarch-bar/hierarch-bar.component.css
@@ -20,3 +20,7 @@ h4 {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
+
+/* .wrapper {
+  background-image: url("../../assets/img/bg-striped.png");
+} */
