--- a/client/src/app/hierarch-bar/hierarch-bar.component.html
+++ b/client/src/app/hierarch-bar/hierarch-bar.component.html
@@ -1,6 +1,6 @@
 <div id="intro" class="title">
-    <h4>bar-chart visualization</h4>
-    <h1>Third Party Domain Requests</h1>
-    <h3>Click on an element to dive deeper</h3>
+  <h4>bar-chart visualization</h4>
+  <h1>Third Party Domain Requests</h1>
+  <h3>Click on an element to dive deeper</h3>
 </div>
-<div id="my_dataviz"></div>
+<div class="wrapper" id="my_dataviz"></div>
