--- a/client/src/app/network-new/network-new.component.css
+++ b/client/src/app/network-new/network-new.component.css
@@ -8,19 +8,18 @@
   stroke-width: 4px;
 }
 
-body {
-  background-color: black;
-}
-
 .select {
   position: absolute;
 }
 
 #intro {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
+  left: 0;
+  right: 0;
   text-align: center;
-  margin-bottom: 35px;
-  padding-top: 5px;
-  margin-top: 10px;
 }
 
 h1,
@@ -37,4 +36,8 @@ h4 {
   font-family: "Stick No Bills", sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
+}
+
+.wrapper {
+  background-image: url("../../assets/img/bg-striped.png");
 }
