--- a/client/src/app/network-new/network-new.component.html
+++ b/client/src/app/network-new/network-new.component.html
@@ -1,22 +1,23 @@
-<div id="intro" class="title">
-  <h4>nodes & links</h4>
-  <h1>Network</h1>
+<div class="wrapper">
+  <div class="select">
+    <mat-form-field appearance="fill">
+      <mat-label>Select Nodes</mat-label>
+      <mat-select [formControl]="toppings" multiple (selectionChange)="changeSelection($event.value)">
+        <mat-select-trigger>
+          {{toppings.value?.[0] || ''}}
+          <span *ngIf="(toppings.value?.length || 0) > 1" class="example-additional-selection">
+            (+{{(toppings.value?.length || 0) - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
+          </span>
+        </mat-select-trigger>
+        <mat-option *ngFor="let node of nodeList" [value]="node.id">{{node.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div id="network">
+    <div id="intro" class="title">
+      <h4>nodes & links</h4>
+    </div>
+  </div>
+  <app-color-legend></app-color-legend>
+  <app-information></app-information>
 </div>
-<div class="select">
-  <mat-form-field appearance="fill">
-    <mat-label>Select Nodes</mat-label>
-    <mat-select [formControl]="toppings" multiple (selectionChange)="changeSelection($event.value)">
-      <mat-select-trigger>
-        {{toppings.value?.[0] || ''}}
-        <span *ngIf="(toppings.value?.length || 0) > 1" class="example-additional-selection">
-          (+{{(toppings.value?.length || 0) - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
-        </span>
-      </mat-select-trigger>
-      <mat-option *ngFor="let node of nodeList" [value]="node.id">{{node.name}}</mat-option>
-    </mat-select>
-  </mat-form-field>
-</div>
-<div id="network">
-</div>
-<app-color-legend></app-color-legend>
-<app-information></app-information>
