--- a/client/src/app/hierarch-bar/hierarch-bar.component.html
+++ b/client/src/app/hierarch-bar/hierarch-bar.component.html
@@ -1,6 +1,7 @@
-<div id="intro" class="title">
-  <h4>bar-chart visualization</h4>
-  <h1>Third Party Domain Requests</h1>
-  <h3>Click on an element to dive deeper</h3>
+<div class="wrapper">
+  <div id="intro" class="title">
+    <h1>third party domains</h1>
+    <h3>Click on an element to dive deeper/ Click on the outside return</h3>
+  </div>
+  <div id="my_dataviz"></div>
 </div>
-<div class="wrapper" id="my_dataviz"></div>
