--- a/client/src/app/information/information.component.css
+++ b/client/src/app/information/information.component.css
@@ -3,8 +3,12 @@
   z-index: 600;
   box-shadow: 6px 6px 12px rgb(0 0 0 / 18%);
   border-radius: 5px;
-  top: 70px;
-  right: 10px;
-  background: rgba(255, 255, 255);
-  font-family: "Montserrat", sans-serif;
+  top: 4px;
+  right: 4px;
+  background: rgba(255, 255, 255, 0.9);
+  font-family: "Merriweather", serif;
+}
+
+h3 {
+  font-family: "Merriweather", serif;
 }
