--- a/client/src/app/network-new/network-new.component.html
+++ b/client/src/app/network-new/network-new.component.html
@@ -17,4 +17,5 @@
   </div>
   <app-color-legend></app-color-legend>
   <app-information></app-information>
+  <app-network-menu></app-network-menu>
 </div>
