--- a/client/src/app/network-new/network-new.component.css
+++ b/client/src/app/network-new/network-new.component.css
@@ -14,6 +14,11 @@
   left: 50%;
 }
 
+#network {
+  height: 100%;
+  width: 100%;
+}
+
 #intro {
   position: absolute;
   margin-left: auto;
@@ -41,5 +46,6 @@ h4 {
 }
 
 .wrapper {
+  height: 100%;
   background-image: url("../../assets/img/bg-striped.png");
 }
