--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -1,14 +1,27 @@
 <div class="menuWrapper">
-    <mat-card><h2>Filter</h2></mat-card>
-
-    <mat-accordion class="networkMenuWrapper">
-        <mat-expansion-panel hideToggle>
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    by domain
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <!--s<section class="checkBoxContainer">
+  <mat-card>
+    <h2>Menu</h2>
+  </mat-card>
+  <mat-accordion class="networkMenuWrapper">
+    <mat-expansion-panel hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Controls
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <div class="controls">
+        <fa-icon (click)="controlAction('forward')" [icon]="faStepForward"></fa-icon>
+        <fa-icon (click)="controlAction('backward')" [icon]="faStepBackward"></fa-icon>
+        <fa-icon (click)="controlAction('reset')" [icon]="faUndo"></fa-icon>
+      </div>
+    </mat-expansion-panel>
+    <mat-expansion-panel hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Website Selection
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <!--s<section class="checkBoxContainer">
                 <span class="example-list-section">
                   <mat-checkbox
                                 [checked]="allComplete"
@@ -29,12 +42,25 @@
                   </ul>
                 </span>
               </section>-->
-            <section class="checkBoxContainer" id="domainCheckBoxContainer">
-                <mat-checkbox class="checkBox" *ngFor="let domain of domains" (change)="this.checkBoxChange($event, domain.name)" class="checkBox">{{domain.name}}</mat-checkbox>
-            </section>
-            <button (click)="this.changeSelection()" mat-flat-button color="primary">Apply</button>
-        </mat-expansion-panel>
-      
-    </mat-accordion>
-    
+      <div class="wrapping">
+        <section class="checkBoxContainer" id="domainCheckBoxContainer">
+          <mat-checkbox class="checkBox" *ngFor="let domain of domains"
+            (change)="this.checkBoxChange($event, domain.name)" class="checkBox">{{domain.name}}</mat-checkbox>
+        </section>
+        <button (click)="this.changeSelection()" mat-flat-button color="primary">Apply</button>
+      </div>
+    </mat-expansion-panel>
+    <mat-expansion-panel [expanded]="false">
+      <mat-expansion-panel-header>
+        <mat-panel-title> Legende </mat-panel-title>
+      </mat-expansion-panel-header>
+      <div>
+        <div class="list" *ngFor="let element of legend | keyvalue">
+          <div class="list-element" [style.background-color]="element.value"></div>
+          {{ element.key }}
+        </div>
+      </div>
+    </mat-expansion-panel>
+  </mat-accordion>
+
 </div>
