fix: network now resizes with window resizing

--- a/client/src/app/network-new/network-new.component.html
+++ b/client/src/app/network-new/network-new.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div id="network"></div>
+  <div id="network" (window:resize)="onResize($event)"></div>
   <app-information></app-information>
   <app-color-legend></app-color-legend>
   <app-network-menu></app-network-menu>
