--- a/client/src/app/network-new/network-new.component.css
+++ b/client/src/app/network-new/network-new.component.css
@@ -43,3 +43,20 @@ h4 {
 .wrapper {
   background-image: url("../../assets/img/bg-striped.png");
 }
+
+#network {
+  display: inline-block;
+  position: relative;
+  width: 100vw;
+  padding-bottom: 100vh;
+  height: 0; 
+  vertical-align: top;
+  overflow: hidden;
+}
+
+.svg-content {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
