--- a/client/src/app/network-menu/network-menu.component.css
+++ b/client/src/app/network-menu/network-menu.component.css
@@ -8,8 +8,7 @@
   box-shadow: 6px 6px 12px rgb(0 0 0 / 18%);
   border-radius: 5px;
   font-size: 1rem;
-  max-height: 1000px;
-  overflow-y: auto;
+  max-height: 80vh;
 }
 
 .checkBox {
