--- a/client/src/app/color-legend/color-legend.component.html
+++ b/client/src/app/color-legend/color-legend.component.html
@@ -1,5 +1,5 @@
-<mat-expansion-panel [expanded]="false">
-  <mat-expansion-panel-header>
+<mat-expansion-panel [expanded]="false" #expansionPanel>
+  <mat-expansion-panel-header (click)="expandPanel(expansionPanel, $event)">
     <mat-panel-title>legend</mat-panel-title>
   </mat-expansion-panel-header>
   <div>
