style: expansion panels are now separated by horizontal lines and don't have a box shadow

--- a/client/src/app/network-menu/network-menu.component.css
+++ b/client/src/app/network-menu/network-menu.component.css
@@ -11,6 +11,10 @@
   max-height: 80vh;
 }
 
+::ng-deep .mat-accordion, .mat-card, .mat-expansion-panel {
+  box-shadow: none;
+}
+
 .checkBox {
   display: flex;
 }
