--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -8,76 +8,94 @@
   <mat-accordion class="networkPanelWrapper">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
-        <mat-panel-title>
-          filter by domain
-        </mat-panel-title>
+        <mat-panel-title> filter by domain </mat-panel-title>
       </mat-expansion-panel-header>
       <div class="wrapping">
         <section class="checkBoxes">
           <span class="superCheckBox">
-            <mat-checkbox class="example-margin" [color]="domainCheckBoxes.color"
+            <mat-checkbox
+              class="example-margin"
+              [color]="domainCheckBoxes.color"
               [indeterminate]="someComplete(this.domainCheckBoxes)"
-              (change)="setAll($event.checked, this.domainCheckBoxes)"
-              (click)="$event.stopPropagation()">
-              {{domainCheckBoxes.name}}
+              (change)="setAll($event, this.domainCheckBoxes)"
+              (click)="$event.stopPropagation()"
+            >
+              {{ domainCheckBoxes.name }}
             </mat-checkbox>
           </span>
           <span>
             <ul>
               <li *ngFor="let subCheckBox of domainCheckBoxes.subCheckBoxes">
-                <mat-checkbox [(ngModel)]="subCheckBox.completed" [color]="subCheckBox.color"
-                  (ngModelChange)="updateAllComplete(domainCheckBoxes)" 
-                  (change)="setAll($event.checked, subCheckBox)"
-                  (click)="$event.stopPropagation()">
-                  {{subCheckBox.name}}
+                <mat-checkbox
+                  [(ngModel)]="subCheckBox.completed"
+                  [color]="subCheckBox.color"
+                  (change)="updateCheckBoxes($event, subCheckBox)"
+                  (click)="$event.stopPropagation()"
+                >
+                  {{ subCheckBox.name }}
                 </mat-checkbox>
               </li>
             </ul>
           </span>
         </section>
       </div>
-      <button (click)="this.changeSelection()" mat-flat-button class="applyButton" color="primary">Apply</button>
+      <button
+        (click)="this.changeSelection()"
+        mat-flat-button
+        class="applyButton"
+        color="primary"
+      >
+        Apply
+      </button>
     </mat-expansion-panel>
     <hr />
 
     <mat-expansion-panel>
-      <mat-expansion-panel-header >
-        <mat-panel-title>
-          filter by category
-        </mat-panel-title>
+      <mat-expansion-panel-header>
+        <mat-panel-title> filter by category </mat-panel-title>
       </mat-expansion-panel-header>
       <div class="wrapping">
         <section class="checkBoxes">
           <span class="superCheckBox">
-            <mat-checkbox class="example-margin" [color]="domainCheckBoxes.color"
+            <mat-checkbox
+              class="example-margin"
+              [color]="domainCheckBoxes.color"
               [indeterminate]="someComplete(this.categoryCheckBoxes)"
-              (change)="setAll($event.checked, this.categoryCheckBoxes)"
-              (click)="$event.stopPropagation()">
-              {{categoryCheckBoxes.name}}
+              (change)="setAll($event, this.categoryCheckBoxes)"
+              (click)="$event.stopPropagation()"
+            >
+              {{ categoryCheckBoxes.name }}
             </mat-checkbox>
           </span>
           <mat-accordion>
             <div *ngFor="let subCheckBox of categoryCheckBoxes.subCheckBoxes">
               <mat-expansion-panel>
-                <mat-expansion-panel-header [expandedHeight]="'25px'" [collapsedHeight]="'25px'">
+                <mat-expansion-panel-header
+                  [expandedHeight]="'25px'"
+                  [collapsedHeight]="'25px'"
+                >
                   <mat-panel-title>
-                    <mat-checkbox [(ngModel)]="subCheckBox.completed" [color]="subCheckBox.color"
+                    <mat-checkbox
+                      [(ngModel)]="subCheckBox.completed"
+                      [color]="subCheckBox.color"
                       [indeterminate]="someComplete(this.subCheckBox)"
-                      (ngModelChange)="updateAllComplete(categoryCheckBoxes)"
-                      (change)="setAll($event.checked, subCheckBox)"
-                      (click)="$event.stopPropagation()">
-                      {{subCheckBox.name}}
+                      (change)="updateCheckBoxes($event, subCheckBox)"
+                      (click)="$event.stopPropagation()"
+                    >
+                      {{ subCheckBox.name }}
                     </mat-checkbox>
                   </mat-panel-title>
                 </mat-expansion-panel-header>
                 <section>
                   <ul *ngFor="let subSubCheckBox of subCheckBox.subCheckBoxes">
                     <li>
-                      <mat-checkbox [(ngModel)]="subSubCheckBox.completed" [color]="subSubCheckBox.color"
-                        (ngModelChange)="updateAllComplete(subCheckBox)"
-                        (change)="setAll($event.checked, subSubCheckBox)"
-                        (click)="$event.stopPropagation()">
-                        {{subSubCheckBox.name}}
+                      <mat-checkbox
+                        [(ngModel)]="subSubCheckBox.completed"
+                        [color]="subSubCheckBox.color"
+                        (change)="updateCheckBoxes($event, subSubCheckBox)"
+                        (click)="$event.stopPropagation()"
+                      >
+                        {{ subSubCheckBox.name }}
                       </mat-checkbox>
                     </li>
                   </ul>
@@ -87,7 +105,14 @@
           </mat-accordion>
         </section>
       </div>
-      <button (click)="this.changeSelection()" mat-flat-button class="applyButton" color="primary">Apply</button>
+      <button
+        (click)="this.changeSelection()"
+        mat-flat-button
+        class="applyButton"
+        color="primary"
+      >
+        Apply
+      </button>
     </mat-expansion-panel>
     <hr />
     <mat-expansion-panel>
@@ -96,7 +121,5 @@
       </mat-expansion-panel-header>
       <app-color-legend></app-color-legend>
     </mat-expansion-panel>
-
   </mat-accordion>
-
 </div>
