alt hierarchy working

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -13,6 +13,13 @@
     </a>
   </div>
 </div>
+<div class="data">
+  <ul>
+    <li (click)="changeDataSet('all')">Swiss & Alt</li>
+    <li (click)="changeDataSet('swiss')">Swiss only</li>
+    <li (click)="changeDataSet('alt')">Alt only</li>
+  </ul>
+</div>
 <div class="wrapper" style="
     display: flex;
     flex-direction: row;
