--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -19,6 +19,19 @@ body {
   display: flex;
 }
 
+.data {
+  position: absolute;
+  top: 30%;
+  font-family: "Merriweather", serif;
+  z-index: 100;
+}
+
+.data li {
+  list-style: none;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .nav a {
   color: black;
   text-decoration: none;
