--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -13,25 +13,17 @@
       <div class="wrapping">
         <section class="checkBoxes">
           <span class="superCheckBox">
-            <mat-checkbox
-              class="example-margin"
-              [color]="domainCheckBoxes.color"
-              [indeterminate]="someComplete(this.domainCheckBoxes)"
-              (change)="setAll($event, this.domainCheckBoxes)"
-              (click)="$event.stopPropagation()"
-            >
+            <mat-checkbox class="example-margin" [color]="domainCheckBoxes.color"
+              [indeterminate]="someComplete(this.domainCheckBoxes)" (change)="setAll($event, this.domainCheckBoxes)"
+              (click)="$event.stopPropagation()">
               {{ domainCheckBoxes.name }}
             </mat-checkbox>
           </span>
           <span>
             <ul>
               <li *ngFor="let subCheckBox of domainCheckBoxes.subCheckBoxes">
-                <mat-checkbox
-                  [(ngModel)]="subCheckBox.completed"
-                  [color]="subCheckBox.color"
-                  (change)="updateCheckBoxes($event, subCheckBox)"
-                  (click)="$event.stopPropagation()"
-                >
+                <mat-checkbox [(ngModel)]="subCheckBox.completed" [color]="subCheckBox.color"
+                  (change)="updateCheckBoxes($event, subCheckBox)" (click)="$event.stopPropagation()">
                   {{ subCheckBox.name }}
                 </mat-checkbox>
               </li>
@@ -39,12 +31,7 @@
           </span>
         </section>
       </div>
-      <button
-        (click)="this.changeSelection()"
-        mat-flat-button
-        class="applyButton"
-        color="primary"
-      >
+      <button (click)="this.changeSelection()" mat-flat-button class="applyButton" color="primary">
         Apply
       </button>
     </mat-expansion-panel>
@@ -57,31 +44,20 @@
       <div class="wrapping">
         <section class="checkBoxes">
           <span class="superCheckBox">
-            <mat-checkbox
-              class="example-margin"
-              [color]="domainCheckBoxes.color"
-              [indeterminate]="someComplete(this.categoryCheckBoxes)"
-              (change)="setAll($event, this.categoryCheckBoxes)"
-              (click)="$event.stopPropagation()"
-            >
+            <mat-checkbox class="example-margin" [color]="domainCheckBoxes.color"
+              [indeterminate]="someComplete(this.categoryCheckBoxes)" (change)="setAll($event, this.categoryCheckBoxes)"
+              (click)="$event.stopPropagation()">
               {{ categoryCheckBoxes.name }}
             </mat-checkbox>
           </span>
           <mat-accordion>
             <div *ngFor="let subCheckBox of categoryCheckBoxes.subCheckBoxes">
               <mat-expansion-panel>
-                <mat-expansion-panel-header
-                  [expandedHeight]="'25px'"
-                  [collapsedHeight]="'25px'"
-                >
+                <mat-expansion-panel-header [expandedHeight]="'25px'" [collapsedHeight]="'25px'">
                   <mat-panel-title>
-                    <mat-checkbox
-                      [(ngModel)]="subCheckBox.completed"
-                      [color]="subCheckBox.color"
-                      [indeterminate]="someComplete(this.subCheckBox)"
-                      (change)="updateCheckBoxes($event, subCheckBox)"
-                      (click)="$event.stopPropagation()"
-                    >
+                    <mat-checkbox [(ngModel)]="subCheckBox.completed" [color]="subCheckBox.color"
+                      [indeterminate]="someComplete(this.subCheckBox)" (change)="updateCheckBoxes($event, subCheckBox)"
+                      (click)="$event.stopPropagation()">
                       {{ subCheckBox.name }}
                     </mat-checkbox>
                   </mat-panel-title>
@@ -89,12 +65,8 @@
                 <section>
                   <ul *ngFor="let subSubCheckBox of subCheckBox.subCheckBoxes">
                     <li>
-                      <mat-checkbox
-                        [(ngModel)]="subSubCheckBox.completed"
-                        [color]="subSubCheckBox.color"
-                        (change)="updateCheckBoxes($event, subSubCheckBox)"
-                        (click)="$event.stopPropagation()"
-                      >
+                      <mat-checkbox [(ngModel)]="subSubCheckBox.completed" [color]="subSubCheckBox.color"
+                        (change)="updateCheckBoxes($event, subSubCheckBox)" (click)="$event.stopPropagation()">
                         {{ subSubCheckBox.name }}
                       </mat-checkbox>
                     </li>
@@ -105,12 +77,7 @@
           </mat-accordion>
         </section>
       </div>
-      <button
-        (click)="this.changeSelection()"
-        mat-flat-button
-        class="applyButton"
-        color="primary"
-      >
+      <button (click)="this.changeSelection()" mat-flat-button class="applyButton" color="primary">
         Apply
       </button>
     </mat-expansion-panel>
@@ -119,7 +86,13 @@
       <mat-expansion-panel-header>
         <mat-panel-title>legend</mat-panel-title>
       </mat-expansion-panel-header>
-      <app-color-legend></app-color-legend>
+      <app-color-legend [data]="color"></app-color-legend>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>legend 3p</mat-panel-title>
+      </mat-expansion-panel-header>
+      <app-color-legend [data]="color3p"></app-color-legend>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
