fixed bug datachange

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -17,6 +17,7 @@ body {
   position: absolute;
   width: 100%;
   display: flex;
+  z-index: 200;
 }
 
 .data {
@@ -28,8 +29,19 @@ body {
 
 .data li {
   list-style: none;
-  text-decoration: underline;
   cursor: pointer;
+  font-size: large;
+  margin-bottom: 5px;
+}
+
+.data ul {
+  margin-left: 0;
+  padding-left: 2px;
+}
+
+.bording {
+  border-bottom: 4px black solid;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
 }
 
 .nav a {
@@ -39,7 +51,7 @@ body {
 }
 
 .icon {
-  font-size: 40px;
+  font-size: 25px;
   margin: 10px;
 }
 .wrapper {
