--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -37,7 +37,7 @@
     </mat-expansion-panel>
     <hr />
 
-    <mat-expansion-panel>
+    <!-- <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title> filter by category </mat-panel-title>
       </mat-expansion-panel-header>
@@ -80,14 +80,14 @@
       <button (click)="this.changeSelection()" mat-flat-button class="applyButton" color="primary">
         Apply
       </button>
-    </mat-expansion-panel>
-    <hr />
+    </mat-expansion-panel> -->
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>legend</mat-panel-title>
       </mat-expansion-panel-header>
       <app-color-legend [data]="color"></app-color-legend>
     </mat-expansion-panel>
+    <hr>
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>legend 3p</mat-panel-title>
