--- a/client/src/app/network-new/network-new.component.css
+++ b/client/src/app/network-new/network-new.component.css
@@ -2,7 +2,12 @@
   stroke: white;
   stroke-width: 2px;
 }
-
+.nav {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  z-index: 200;
+}
 .link {
   stroke: gray;
   stroke-width: 4px;
@@ -55,7 +60,7 @@ h4 {
   position: relative;
   width: 100vw;
   padding-bottom: 100vh;
-  height: 0; 
+  height: 0;
   vertical-align: top;
   overflow: hidden;
 }
