--- a/client/src/app/information/information.component.css
+++ b/client/src/app/information/information.component.css
@@ -9,6 +9,13 @@
   font-family: "Merriweather", serif;
 }
 
+.info ul {
+  padding-left: 1px;
+  list-style: none;
+}
+
 h3 {
   font-family: "Merriweather", serif;
+  padding-left: 5px;
+  padding-right: 5px;
 }
