--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -83,14 +83,14 @@
     </mat-expansion-panel> -->
     <mat-expansion-panel>
       <mat-expansion-panel-header>
-        <mat-panel-title>legend</mat-panel-title>
+        <mat-panel-title>category legend</mat-panel-title>
       </mat-expansion-panel-header>
       <app-color-legend [data]="color"></app-color-legend>
     </mat-expansion-panel>
     <hr>
     <mat-expansion-panel>
       <mat-expansion-panel-header>
-        <mat-panel-title>legend 3p</mat-panel-title>
+        <mat-panel-title>country legend</mat-panel-title>
       </mat-expansion-panel-header>
       <app-color-legend [data]="color3p"></app-color-legend>
     </mat-expansion-panel>
