feat: navigating through node selections
bug: navigating while change between data sets doesn't work properly

--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -1,6 +1,8 @@
 <div class="menuWrapper">
   <mat-card>
     <h2>Menu</h2>
+    <button mat-stroked-button color="basic" [disabled]="backDisabled" id="back" (click)="this.navigateSelection(-1)">< previous selection</button>
+    <button mat-stroked-button color="basic" [disabled]="forwardDisabled" id="forward" (click)="this.navigateSelection(1)">next selection ></button>
   </mat-card>
 
   <hr />
