--- a/client/src/app/information/information.component.css
+++ b/client/src/app/information/information.component.css
@@ -3,14 +3,17 @@
   z-index: 600;
   box-shadow: 6px 6px 12px rgb(0 0 0 / 18%);
   border-radius: 5px;
-  top: 4px;
-  right: 4px;
+  padding: 10px;
+  max-width: 300px;
+  top: 5px;
+  right: 5px;
   background: rgba(255, 255, 255, 0.9);
   font-family: "Merriweather", serif;
 }
 
 .info ul {
-  padding-left: 1px;
+  padding-left: 0;
+  margin: 0;
   list-style: none;
 }
 
@@ -18,4 +21,5 @@ h3 {
   font-family: "Merriweather", serif;
   padding-left: 5px;
   padding-right: 5px;
+  margin-bottom: 5px;
 }
