--- a/client/src/app/information/information.component.html
+++ b/client/src/app/information/information.component.html
@@ -1,10 +1,12 @@
 <div class="information">
-    <div style="display: flex; justify-content:center; margin-bottom:0">
-        <h3 style="margin: 0;">{{name}}</h3>
-    </div>
-    <div class="info" style="padding: 2px;" *ngIf="node">
-        <ul>
-            <li *ngFor="let element of node | keyvalue">{{element.key}}: {{element.value}}</li>
-        </ul>
-    </div>
+  <div style="display: flex; justify-content: center; margin-bottom: 0">
+    <h3>{{ name }}</h3>
+  </div>
+  <div class="info" *ngIf="node">
+    <ul>
+      <li *ngFor="let element of node | keyvalue">
+        {{ element.key }}: {{ element.value }}
+      </li>
+    </ul>
+  </div>
 </div>
