fix: Navigation bugFixing still not working

--- a/client/src/app/network-menu/network-menu.component.css
+++ b/client/src/app/network-menu/network-menu.component.css
@@ -37,3 +37,9 @@ hr {
 .mat-stroked-button {
   margin-right: 5px;
 }
+
+.mat-expansion-panel {
+  box-shadow: none;
+  padding: 0;
+  margin: 0;
+}
