--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -1,8 +1,24 @@
 <div class="menuWrapper">
   <mat-card>
     <h2>Menu</h2>
-    <button mat-stroked-button color="basic" [disabled]="backDisabled" id="back" (click)="this.navigateSelection(-1)">< previous selection</button>
-    <button mat-stroked-button color="basic" [disabled]="forwardDisabled" id="forward" (click)="this.navigateSelection(1)">next selection ></button>
+    <button
+      mat-stroked-button
+      color="basic"
+      [disabled]="backDisabled"
+      id="back"
+      (click)="navigateSelection(-1)"
+    >
+      < previous selection
+    </button>
+    <button
+      mat-stroked-button
+      color="basic"
+      [disabled]="forwardDisabled"
+      id="forward"
+      (click)="navigateSelection(1)"
+    >
+      next selection >
+    </button>
   </mat-card>
 
   <hr />
@@ -15,17 +31,25 @@
       <div class="wrapping">
         <section class="checkBoxes">
           <span class="superCheckBox">
-            <mat-checkbox class="example-margin" [color]="domainCheckBoxes.color"
-              [indeterminate]="someComplete(this.domainCheckBoxes)" (change)="setAll($event, this.domainCheckBoxes)"
-              (click)="$event.stopPropagation()">
+            <mat-checkbox
+              class="example-margin"
+              [color]="domainCheckBoxes.color"
+              [indeterminate]="someComplete(this.domainCheckBoxes)"
+              (change)="setAll($event, this.domainCheckBoxes)"
+              (click)="$event.stopPropagation()"
+            >
               {{ domainCheckBoxes.name }}
             </mat-checkbox>
           </span>
           <span>
             <ul>
               <li *ngFor="let subCheckBox of domainCheckBoxes.subCheckBoxes">
-                <mat-checkbox [(ngModel)]="subCheckBox.completed" [color]="subCheckBox.color"
-                  (change)="updateCheckBoxes($event, subCheckBox)" (click)="$event.stopPropagation()">
+                <mat-checkbox
+                  [(ngModel)]="subCheckBox.completed"
+                  [color]="subCheckBox.color"
+                  (change)="updateCheckBoxes($event, subCheckBox)"
+                  (click)="$event.stopPropagation()"
+                >
                   {{ subCheckBox.name }}
                 </mat-checkbox>
               </li>
@@ -33,7 +57,12 @@
           </span>
         </section>
       </div>
-      <button (click)="this.changeSelection()" mat-flat-button class="applyButton" color="primary">
+      <button
+        (click)="changeSelection()"
+        mat-flat-button
+        class="applyButton"
+        color="primary"
+      >
         Apply
       </button>
     </mat-expansion-panel>
@@ -89,7 +118,7 @@
       </mat-expansion-panel-header>
       <app-color-legend [data]="color"></app-color-legend>
     </mat-expansion-panel>
-    <hr>
+    <hr />
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>country legend</mat-panel-title>
