--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -34,9 +34,10 @@
             <mat-checkbox
               class="example-margin"
               [color]="domainCheckBoxes.color"
-              [indeterminate]="someComplete(this.domainCheckBoxes)"
-              (change)="setAll($event, this.domainCheckBoxes)"
+              [indeterminate]="someComplete(domainCheckBoxes)"
+              (change)="setAll($event)"
               (click)="$event.stopPropagation()"
+              [checked]="true"
             >
               {{ domainCheckBoxes.name }}
             </mat-checkbox>
