--- a/client/src/app/network-new/network-new.component.html
+++ b/client/src/app/network-new/network-new.component.html
@@ -1,5 +1,7 @@
 <div class="wrapper">
   <div id="network" (window:resize)="onResize($event)"></div>
   <app-information></app-information>
-  <app-network-menu></app-network-menu>
+  <app-network-menu
+    (selectionChanged)="selectionChanged($event)"
+  ></app-network-menu>
 </div>
