fix: checkboxes and nodes are up to date now
bug: using other datasets doesn't work properly

--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -50,6 +50,8 @@
                   [color]="subCheckBox.color"
                   (change)="updateCheckBoxes($event, subCheckBox)"
                   (click)="$event.stopPropagation()"
+                  [id]="subCheckBox.name"
+                  [checked]="subCheckBox.completed"
                 >
                   {{ subCheckBox.name }}
                 </mat-checkbox>
