fix: fixed bugs concerning history and changing data

--- a/client/src/app/network-menu/network-menu.component.html
+++ b/client/src/app/network-menu/network-menu.component.html
@@ -34,7 +34,7 @@
             <mat-checkbox
               class="example-margin"
               [color]="domainCheckBoxes.color"
-              [indeterminate]="someComplete(domainCheckBoxes)"
+              [indeterminate]="domainCheckBoxes.indeterminate"
               (change)="setAll($event)"
               (click)="$event.stopPropagation()"
               [checked]="true"
