--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,32 +1,28 @@
-<!-- <app-navbar></app-navbar> -->
-<div class="nav">
-  <div class="icon_wrapper">
-    <a mat-button [routerLink]="'/bar'" routerLinkActive="active">
-      <div class="icon">
-        BAR
-        <!-- <fa-icon [icon]="faChartBar"></fa-icon> -->
-      </div>
-    </a>
-    <a mat-button [routerLink]="'/network'" routerLinkActive="active">
-      <div class="icon">
-        NETWORK
-        <!-- <fa-icon [icon]="fadiagram"></fa-icon> -->
-      </div>
-    </a>
-  </div>
-</div>
+<app-navbar></app-navbar>
 <div class="data">
   <ul>
-    <li [ngClass]="{'bording': active == 'all'}" (click)="changeDataSet('all')">Swiss & Alt</li>
-    <li [ngClass]="{'bording': active == 'swiss'}" (click)="changeDataSet('swiss')">Swiss only</li>
-    <li [ngClass]="{'bording': active == 'alt'}" (click)="changeDataSet('alt')">Alt only</li>
+    <li [ngClass]="{ bording: active == 'all' }" (click)="changeDataSet('all')">
+      Swiss & Alt
+    </li>
+    <li
+      [ngClass]="{ bording: active == 'swiss' }"
+      (click)="changeDataSet('swiss')"
+    >
+      Swiss only
+    </li>
+    <li [ngClass]="{ bording: active == 'alt' }" (click)="changeDataSet('alt')">
+      Alt only
+    </li>
   </ul>
 </div>
-<div class="wrapper" style="
+<div
+  class="wrapper"
+  style="
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: center;
-  ">
+  "
+>
   <router-outlet></router-outlet>
 </div>
