feat: added buttons to change between number of requests and payload sizes

--- a/client/src/app/barchart-types-sizes/barchart-types-sizes.component.html
+++ b/client/src/app/barchart-types-sizes/barchart-types-sizes.component.html
@@ -3,5 +3,5 @@
     <h1>Request types and payload sizes</h1>
   </div>
   <div id="barchart"></div>
-  <app-types-sizes-menu></app-types-sizes-menu>
+  <app-types-sizes-menu (dataToShow)="alert($event)"></app-types-sizes-menu>
 </div>
