refactor: renamed types-sizes to barchart-details

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       <a [routerLink]="'/network'" routerLinkActive="active"> network </a>
     </li>
     <li>
-      <a [routerLink]="'/types-sizes'" routerLinkActive="active">
+      <a [routerLink]="'/details'" routerLinkActive="active">
         request details
       </a>
     </li>
