--- a/client/src/app/barchart-details/barchart-details.component.html
+++ b/client/src/app/barchart-details/barchart-details.component.html
@@ -1,6 +1,7 @@
 <div class="wrapper">
   <div id="intro" class="title">
     <h1>Request types and payload sizes</h1>
+    <h3>{{ description.value }}</h3>
   </div>
   <div id="barchart"></div>
   <app-barchart-details-menu></app-barchart-details-menu>
