test: added component that tests if links in network can be filled with data

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -11,5 +11,8 @@
         request details
       </a>
     </li>
+    <li>
+      <a [routerLink]="'/test'" routerLinkActive="active"> test </a>
+    </li>
   </ul>
 </nav>
