--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -13,6 +13,12 @@
     <li [ngClass]="{ bording: active == 'alt' }" (click)="changeDataSet('alt')">
       Alt only
     </li>
+    <li
+      [ngClass]="{ bording: active == 'schwaiger' }"
+      (click)="changeDataSet('schwaiger')"
+    >
+      Alt Schwaiger
+    </li>
   </ul>
 </div>
 <div
