feat: added lading page

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav>
   <ul>
     <li>
+      <a [routerLink]="'/home'" routerLinkActive="active"> home </a>
+    </li>
+    <li>
       <a [routerLink]="'/bar'" routerLinkActive="active"> bar </a>
     </li>
     <li>
