--- a/client/src/app/landing-page/landing-page.component.html
+++ b/client/src/app/landing-page/landing-page.component.html
@@ -15,9 +15,9 @@
           </figure>
         </li>
         <li>
-          Description of threat: significance of online advertisement for
-          websites propagating disinformation, data collection of online users
-          for pre-targeting purposes in disinformation campaigns.
+          Significance of online advertisement for websites propagating
+          disinformation, data collection of online users for pre-targeting
+          purposes in disinformation campaigns.
           <figure>
             <img src="./assets/img/threat.jpg" alt="threat" />
           </figure>
@@ -43,8 +43,7 @@
         <li>
           <a href="https://webxray.org/" target="_blank">webXray</a>: A tool
           programmed in python that automatically collects traffic data in a
-          chrome browser (without a graphical user interface). The collected
-          data is saved in a database.
+          chrome browser. The collected data is saved in a database.
           <figure>
             <img src="./assets/img/webXray_scheme.svg" alt="webXray scheme" />
           </figure>
