--- a/client/src/app/landing-page/landing-page.component.css
+++ b/client/src/app/landing-page/landing-page.component.css
@@ -11,10 +11,20 @@ main {
   background-color: white;
 }
 
+p,
+ul {
+  font-size: 1.2em;
+}
+
 figure {
   margin: 0;
+  margin-bottom: 15px;
 }
 
 img {
-  width: 100%;
+  width: 80%;
+}
+
+h2 {
+  font-size: 2rem;
 }
