--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -17,7 +17,7 @@
       [ngClass]="{ bording: active == 'schwaiger' }"
       (click)="changeDataSet('schwaiger')"
     >
-      Alt Schwaiger
+      Alternative Media Schwaiger
     </li>
   </ul>
 </div>
